@@ -9,7 +9,7 @@ figures_DATA = alignment.png aspectframe.png \
 	combo.png custom_container.png \
 	dialogs_colorselectiondialog.png dialogs_filechooser.png dialogs_fontselectiondialog.png \
 	dialogs_messagedialog.png dialogs_simple.png \
-	drag_and_drop.png drawingarea_lines.png drawingarea_text.png \
+	drag_and_drop.png drawingarea_arcs.png drawingarea_curve.png drawingarea_lines.png drawingarea_text.png \
 	entry.png eventbox.png frame.png \
 	helloworld.png helloworld2.png label.png \
 	main_menu.png menu_popup.png \
@@ -20,7 +20,7 @@ figures_DATA = alignment.png aspectframe.png \
 	table.png toolbar.png textview.png \
 	treeview_list.png treeview_tree.png treeview_editablecells.png \
         treeview_draganddrop.png treeview_popup.png \
-        devcpp_project_options.png 
+        devcpp_project_options.png cairo_clock.png cairo_joins.png 
 
 EXTRA_DIST = $(figures_DATA)
 
