@@ -4090,11 +4090,11 @@ context->restore();</programlisting>
               <title>Drawing Area - Arcs</title>
               <screenshot>
                   <graphic format="PNG"
-                      fileref="&url_figures_base;drawingarea/arcs.png"/>
+                      fileref="&url_figures_base;drawingarea_arcs.png"/>
               </screenshot>
           </figure>
 
-          <para><ulink url="&url_examples_base;drawingarea_arcs">Source Code</ulink></para>
+          <para><ulink url="&url_examples_base;drawingarea/arcs">Source Code</ulink></para>
 
           <para>
               There are a couple of things to note about this example code.
