@@ -1,3 +1,9 @@
+2005-12-23  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/figures/Makefile.am: Mention the new screenshots 
+	so they are disted and uploaded.
+	* docs/tutorial/gtkmm-tut.xml: Fix a source code path.
+
 2005-12-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* configure.in: added makefiles for new example directories
